add date for japan release

--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@
 	
 				<li><a href="#2007-1510">Oct'07</a></li>
 				<li><a href="#2008">Aug'08</a></li>
+				<li><a href="#2008-2111">Nov'08</a></li>
+
 				<li><a href="#2010">2010</a></li>
 				<li><a href="#2010-diddy">+</a></li>
 				<li><a href="#2010-Dec6">Dec'10</a></li>
@@ -272,7 +274,6 @@
 				<li><a href="#2011-Jan7">Jan'11</a></li>
 				<li><a href="#2011">2011</a></li>
 				<li><a href="#2011-10">Oct'11</a></li>
-				<li><a href="#2008-2111">Nov'11</a></li>
 				<li><a href="#2014">2014</a></li>
 				<li><a href="#2015-10">Oct'15</a></li>
 				<li><a href="#2015-10+">+</a></li>
@@ -352,6 +353,9 @@
 	
 				</li>
 	
+				<li id="2008-2111">
+					<p style="margin-top: 120px;"> November 21, 2008. <br> Emojis release in Japan (only) </p>
+				  </li>
 	
 	
 				<li id="2010">
@@ -393,9 +397,6 @@
 				  </li>
 	
 	
-				  <li id="2008-2111">
-					<p style="margin-top: 120px;"> Emojis release in Japan (only) </p>
-				  </li>
 	
 				  <li id="2014">    
 					  <img src="img/history/unicode.png" style="max-width:900px"/>
