add entries to history

--- a/index.html
+++ b/index.html
@@ -274,13 +274,17 @@
 				<li><a href="#2011-Jan7">Jan'11</a></li>
 				<li><a href="#2011">2011</a></li>
 				<li><a href="#2011-10">Oct'11</a></li>
+				<li><a href="#2013-0108">Aug'13</a></li>
 				<li><a href="#2014">2014</a></li>
 				<li><a href="#2015-10">Oct'15</a></li>
 				<li><a href="#2015-10+">+</a></li>
 				<li><a href="#2015-10-oxf">++</a></li>
+				<li><a href="#2017-Jan2">Jan'17</a></li>
 				<li><a href="#2017-cashapp">2017</a></li>
 				<li><a href="#2018-webuygold">2018</a></li>
 				<li><a href="#2018-jack-in-the-box">Jun'18</a></li>
+				<li><a href="#2019">2019</a></li>
+
 	
 			  </ul>
 			  <ul id="issues">
@@ -396,7 +400,12 @@
 					  <p style="margin-top: 20px;"> Emojis available in USA when the emoji keyboard was added to iPhone iOS 5</p>
 				  </li>
 	
-	
+				  <li id="2013-0108">    
+					<img src="img/history/sony_epic_records.jpeg" style="max-width:900px"/>
+					<p> UTB x Vested In Culture Sony/Epic Records merchandising agreement via Sylvia Rhone</p>
+				</li>
+
+
 	
 				  <li id="2014">    
 					  <img src="img/history/unicode.png" style="max-width:900px"/>
@@ -419,6 +428,12 @@
 					<p> Oxford Dictionaries announced an emoji "word of the year" </p>
 				  </li>
 	
+				  <li id="2017-Jan2">    
+					<img src="img/history/walmart_emoji_sale.png" style="max-width:900px"/>
+					<p> WalMart selling the logo </p>
+				  </li>
+				  
+
 				  <li id="2017-cashapp">    
 					<img src="img/history/10_used_in_cashapp.png" style="max-width:900px"/>
 					<p> Cashapp launches cashcard (money mouth face used in <i>in-app promotions</i> )" </p>
@@ -431,7 +446,12 @@
 
 				  <li id="2018-jack-in-the-box">    
 					<img src="img/history/jack-the-box.png" style="max-width:900px"/>
-					<p> Dollar-eyed, recent Jack In The Box advertisement</p>
+					<p> Recently Jack In The Box advertisement</p>
+				  </li>
+
+				  <li id="2019">    
+					<img src="img/history/smokers_club.jpeg" style="max-width:900px"/>
+					<p> The Smokers Club collab for Smokers Club Festival 2019</p>
 				  </li>
 				  
 	
