add img source as link

--- a/index.html
+++ b/index.html
@@ -400,8 +400,12 @@
 					  <p style="margin-top: 20px;"> Emojis available in USA when the emoji keyboard was added to iPhone iOS 5</p>
 				  </li>
 	
-				  <li id="2013-0108">    
-					<img src="img/history/sony_epic_records.jpeg" style="max-width:900px"/>
+				  <li id="2013-0108">  
+					  <a href="https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F6f421682-3ccd-4a04-8522-733195f694fc%2F1F113FEE-FD57-4DDF-8F45-2C16BCB16ED6.jpeg?table=block&id=198860c9-6f48-4c9f-9a5e-9239ae996591&spaceId=a0be6415-df3d-43d4-a86b-cc95c0301e56&width=2340&userId=3fdcd10e-bb7b-488e-8c96-fe7d5b61a067&cache=v2" 
+					  	target="_blank"
+						style="cursor: pointer;">
+						<img src="img/history/sony_epic_records.jpeg" style="max-width:900px"/>
+					</a>  
 					<p> UTB x Vested In Culture Sony/Epic Records merchandising agreement via Sylvia Rhone</p>
 				</li>
 
