add mailchimp script to test conn

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 				  
 				  <li id="2021-jack-in-the-box">    
 					<img src="img/history/jack-the-box.png" style="max-width:900px"/>
-					<p> Recent jack in the boc advertisement</p>
+					<p> Recent Jack In the Box advertisement</p>
 				  </li>
 
 	
@@ -764,6 +764,10 @@
 		document.addEventListener("DomContentLoaded", loadHistory());
    </script>
 
+<!-- mailchimp -->
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2486c0c4d2369d004d9bbddc2/5216d3598e3804379f4f70ba7.js");</script>
+
+<!-- goatcounter dashboard -->
 	<script data-goatcounter="https://utbnft.goatcounter.com/count"
 		async src="//gc.zgo.at/count.js"></script>
 </body>
