removing countdown after the auction

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>UTB NFTs</title>
     <link rel="stylesheet" href="./css/brutal-layout.css"/>
-    <link rel="stylesheet" href="./css/countdown.css"/>
+    <!-- <link rel="stylesheet" href="./css/countdown.css"/> -->
     <link rel="stylesheet" href="./css/retro-navbar.css"/>
         <link rel="stylesheet" href="./css/top-vibration.css" />
         <link rel="stylesheet" href="./css/3d-button.css" />
@@ -19,7 +19,7 @@
 	
     <script src="./js/navbar.js"></script>
 	<script src="./js/history.js"></script>
-    <script src="./js/countdown.js"></script>
+    <!-- <script src="./js/countdown.js"></script> -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -153,7 +153,7 @@
 			
         </aside>
 
-		      
+<!-- 		      
         <div id="countdown">
             <div id='tiles'></div>
             <div class="labels">
@@ -162,7 +162,7 @@
               <li>Mins</li>
               <li>Secs</li>
             </div>
-          </div>
+          </div> -->
 		  
 
 		  <a href="./calendars/utb-nft-auction.ics" 
@@ -764,7 +764,7 @@
 
     <script>
 		document.addEventListener("DOMContentLoaded", loadNavbar());
-        document.addEventListener("DOMContentLoaded", counter());
+        // document.addEventListener("DOMContentLoaded", counter());
 		document.addEventListener("DomContentLoaded", loadHistory());
    </script>
 
