update link to auction results

--- a/bidding-history.html
+++ b/bidding-history.html
@@ -54,6 +54,12 @@
 </nav>
 </div>
 
+<a href="./index.html" style="cursor: pointer;">
+
+  <img src="./img/utb.png" width="110px" height="110px">
+</a>
+
+
 <header>
   <h1>~ on-air ~</h1>
   <!-- <h2><em>..an NFT that is intentional</em></h2> -->
@@ -63,7 +69,7 @@
   <div class="big-card">
    <div class="card-header">
     <div class="set-icon">
-      <img src="./img/utb.png" style="background-color: black; height: 124px; width: 124px;"/>
+      <img src="./img/utb.png" style="background-color: black; height: 100px; width: 100px;"/>
 
     </div>
     <div class="card-title" id="artwork-name"></div>
