--- a/index.html
+++ b/index.html
@@ -183,10 +183,7 @@
 	
           <br><br>
           <div id="auction-results">
-            <details style="cursor: pointer; color: black; background: yellow; margin-bottom: 20px; padding: 10px;">
-                <summary>auction results</summary>        
-                <p>..will be here</p>
-            </details>
+                <a href="./bidding-history.html" style="color: rgb(247, 217, 45)!important; cursor: pointer; background-color: rgb(11, 80, 31);">check auction results </a>
         </div>
 
 	          
