update link to bidding status

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 	
           <br><br>
           <div id="auction-results">
-                <a href="./bidding-history.html" style="color: rgb(247, 217, 45)!important; cursor: pointer; background-color: rgb(11, 80, 31);">check auction results </a>
+                <a href="./bidding-history.html" style="color: rgb(247, 217, 45)!important; cursor: pointer; background-color: rgb(147, 42, 31); padding: 20px;">bidding activity </a> 
         </div>
 
 	          
