--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <hr>
 
 <header style="margin-top: 20px; font-size: 1em;">
-	Original copyrighted <img src="./img/utb.png" width="40px" height="40px"> smiley NFT auction 8/5 on 
+	Original <img src="./img/utb.png" width="40px" height="40px"> smiley NFT auction 8/5 on 
 	<a href="https://knownorigin.io/utbworldwide" target="_blank" style="cursor: pointer;">KnownOrigin</a>
 </header>
 <br>
